[package]
name = "phantom"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full", ] }
clap = { version = "4.2", features = ["derive"] }
rand = "0.9.2"
anyhow = "1.0"
byteorder = "1.4"
pretty_env_logger = "0.5.0"
log = "0.4.29"
futures = "0.3.31"
lazy_static = "1.5.0"
socket2 = "0.6.1"
flume = "0.12.0"
